# http-api-client-endpoint

./: Cargo.toml  README.md
http-api-client/: Cargo.toml  README.md
http-api-client-endpoint/: Cargo.toml  README.md
http-api-client-endpoint/src/: lib.rs
http-api-client/src/: lib.rs
http-api-endpoint/: Cargo.toml  README.md
http-api-endpoint-demo/: Cargo.toml
http-api-endpoint-demo/src/: httpbin.rs
http-api-endpoint/src/: lib.rs
http-api-isahc-client/: Cargo.toml  README.md
http-api-isahc-client-demo/: Cargo.toml
http-api-isahc-client-demo/src/: httpbin.rs
http-api-isahc-client/demo/: Cargo.toml
http-api-isahc-client/demo/src/: httpbin.rs
http-api-isahc-client/src/: lib.rs
http-api-isahc-client/tests/: sleep_via_x.rs  with_sleep_via_x.rs
http-api-reqwest-client/: Cargo.toml  README.md
http-api-reqwest-client-demo/: Cargo.toml
http-api-reqwest-client-demo/src/: httpbin.rs
http-api-reqwest-client/demo/: Cargo.toml
http-api-reqwest-client/demo/src/: httpbin.rs
http-api-reqwest-client/src/: lib.rs
