[package]
name = "http-api-client-endpoint"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API Client Endpoint"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-client-endpoint"
homepage = "https://github.com/bk-rs/http-api-client-endpoint"
documentation = "https://docs.rs/http-api-client-endpoint"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
http = { version = "0.2", default-features = false }

dyn-clone = { version = "1", default-features = false, optional = true }
