[package]
name = "http-api-client"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-endpoint"
homepage = "https://github.com/bk-rs/http-api-endpoint"
documentation = "https://docs.rs/http-api-client"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-endpoint = { version = "^0.1", path = "../http-api-endpoint" }

async-trait = { version = "0.1", default-features = false }
