[package]
name = "http-api-client"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-client-endpoint"
homepage = "https://github.com/bk-rs/http-api-client-endpoint"
documentation = "https://docs.rs/http-api-client"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.3", default-features = false, path = "../http-api-client-endpoint" }

async-trait = { version = "0.1", default-features = false }

[dev-dependencies]
futures-executor = { version = "0.3" }
