[package]
name = "http-api-endpoint-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "httpbin"
path = "src/httpbin.rs"

[dependencies]
http-api-endpoint = { path = "../http-api-endpoint" }
http-api-isahc-client = { path = "../http-api-isahc-client", features = ["sleep-via-futures-timer"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

futures-lite = { version = "1.12" }
pretty_env_logger = { version = "0.4" }
