[package]
name = "http-api-endpoint"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API Endpoint"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-endpoint"
homepage = "https://github.com/bk-rs/http-api-endpoint"
documentation = "https://docs.rs/http-api-endpoint"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

with-clone-endpoint = ["dyn-clone"]
with-downcast-endpoint = ["downcast-rs"]

[dependencies]
http = { version = "0.2", default-features = false }

dyn-clone = { version = "1.0", default-features = false, optional = true }
downcast-rs = { version = "1.2", default-features = false, optional = true }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
