[package]
name = "http-api-endpoint"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API Endpoint"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-client-endpoint"
homepage = "https://github.com/bk-rs/http-api-client-endpoint"
documentation = "https://docs.rs/http-api-endpoint"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "^0.2", path = "../http-api-client-endpoint" }
