[package]
name = "http-api-isahc-client-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "httpbin"
path = "src/httpbin.rs"

[dependencies]
http-api-client-endpoint = { version = "^0.2", path = "../http-api-client-endpoint" }
http-api-isahc-client = { path = "../http-api-isahc-client", features = ["with-sleep-via-async-timer"] }

futures-lite = { version = "1.12" }
isahc = { version = "1.5", default-features = false, features = ["cookies"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

pretty_env_logger = { version = "0.4" }
