[package]
name = "http-api-isahc-client"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "HTTP API Isahc Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-endpoint"
homepage = "https://github.com/bk-rs/http-api-endpoint"
documentation = "https://docs.rs/http-api-isahc-client"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
features = [ "sleep-via-tokio" ]

[features]
sleep-via-tokio = ["tokio/time"]
sleep-via-futures-timer = ["futures-timer"]
sleep-via-async-io = ["async-io"]

[dependencies]
http-api-client = { version = "^0.1", path = "../http-api-client" }

isahc = { version = "1.5", default-features = false }

tokio = { version = "1.12", default-features = false, optional = true }
futures-timer = { version = "3.0", default-features = false, optional = true }
async-io = { version = "1.6", default-features = false, optional = true }

[dev-dependencies]
http-api-endpoint = { version = "^0.1", path = "../http-api-endpoint" }

futures-executor = { version = "0.3" }
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread"] }
rand = { version = "0.8" }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["sleep-via-tokio", "sleep-via-futures-timer"],
    ["sleep-via-tokio", "sleep-via-async-io"],

    ["sleep-via-futures-timer", "sleep-via-async-io"],
]
skip_optional_dependencies = true
