[package]
name = "http-api-isahc-client"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API Isahc Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-endpoint"
homepage = "https://github.com/bk-rs/http-api-endpoint"
documentation = "https://docs.rs/http-api-isahc-client"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
features = [ "with-sleep-via-tokio" ]

[features]
with-sleep-via-tokio = ["tokio/time"]
with-sleep-via-futures-timer = ["futures-timer"]
with-sleep-via-async-io = ["async-io"]

[dependencies]
http-api-client = { version = "^0.1", path = "../http-api-client" }

isahc = { version = "1.5", default-features = false }

tokio = { version = "1.12", default-features = false, optional = true }
futures-timer = { version = "3.0", default-features = false, optional = true }
async-io = { version = "1.6", default-features = false, optional = true }

[dev-dependencies]
http-api-endpoint = { version = "^0.1", path = "../http-api-endpoint" }

futures-executor = { version = "0.3" }
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread"] }
rand = { version = "0.8" }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["with-sleep-via-tokio", "with-sleep-via-futures-timer"],
    ["with-sleep-via-tokio", "with-sleep-via-async-io"],

    ["with-sleep-via-futures-timer", "with-sleep-via-async-io"],
]
skip_optional_dependencies = true
