[package]
name = "http-api-isahc-client"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API Isahc Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-client-endpoint"
homepage = "https://github.com/bk-rs/http-api-client-endpoint"
documentation = "https://docs.rs/http-api-isahc-client"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
features = [ "with-sleep-via-tokio" ]

[features]
with-sleep-via-tokio = ["async-sleep/impl_tokio"]
with-sleep-via-async-timer = ["async-sleep/impl_async_timer"]
with-sleep-via-async-io = ["async-sleep/impl_async_io"]

[dependencies]
http-api-client = { version = "^0.2", path = "../http-api-client" }

isahc = { version = "1.6", default-features = false }

async-sleep = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
http-api-client-endpoint = { version = "^0.2", path = "../http-api-client-endpoint" }

futures-executor = { version = "0.3" }
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread"] }
rand = { version = "0.8" }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["with-sleep-via-tokio", "with-sleep-via-async-timer"],
    ["with-sleep-via-tokio", "with-sleep-via-async-io"],

    ["with-sleep-via-async-timer", "with-sleep-via-async-io"],
]
skip_optional_dependencies = true
