[package]
name = "http-api-reqwest-client-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "httpbin"
path = "src/httpbin.rs"

[dependencies]
http-api-client-endpoint = { version = "^0.1", path = "../http-api-client-endpoint" }
http-api-reqwest-client = { path = "../http-api-reqwest-client" }

tokio = { version = "1.12", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["native-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

pretty_env_logger = { version = "0.4" }
