[package]
name = "http-api-reqwest-client"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API reqwest Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-endpoint"
homepage = "https://github.com/bk-rs/http-api-endpoint"
documentation = "https://docs.rs/http-api-reqwest-client"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client = { version = "^0.1", path = "../http-api-client" }

reqwest = { version = "0.11", default-features = false }

tokio = { version = "1.12", default-features = false, features = ["time"] }
