[package]
name = "http-api-reqwest-client"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP API reqwest Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-api-client-endpoint"
homepage = "https://github.com/bk-rs/http-api-client-endpoint"
documentation = "https://docs.rs/http-api-reqwest-client"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client = { version = "0.2", default-features = false, path = "../http-api-client" }

reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "rustls-tls",
    "http2",
    "macos-system-configuration",
] }

tokio = { version = "1", default-features = false, features = ["time"] }
